Added back button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             </button>
            <div> 
             <button id="new-quote">New Quoter</button>
+            <button id="back-quote">
+                <i class='fas fa-reply'></i>
            </div>
         </div>
     </div>
